# tf-m-extras

./: .gitmodules  LICENSE  license.rst  readme.rst
examples/: examples_readme.rst
examples/corstone310_fvp_dma/dma350_ns/: CMakeLists.txt  application_defined_privileged_functions.h  clcd_dma_wrapper.c  clcd_dma_wrapper.h  clcd_task.c  corstone310_freertos.ld  device_definition.c  draw_task.c  example_tasks.h  main_ns.c  pattern.c  pattern.h  print_log.c  print_log.h  readme.rst  shared_buffer.c  systimer_armv8-m_timeout.c  timeout.h
examples/corstone310_fvp_dma/dma350_ns/amazon-freertos/: LICENSE
examples/corstone310_fvp_dma/dma350_ns/clcd_lib/: clcd_mps3_drv.c  clcd_mps3_drv.h  clcd_mps3_lib.c  clcd_mps3_lib.h  clcd_mps3_reg_map.h
examples/corstone310_fvp_dma/dma350_ns/ext/freertos-kernel/: CMakeLists.txt
examples/corstone310_fvp_dma/dma350_ns/freertos-config/: FreeRTOSConfig.h  LICENSE
examples/corstone310_fvp_dma/dma350_ns/freertos-demo/: LICENSE.md  corstone310_freertos.sct  section_limits.c
examples/corstone310_fvp_dma/dma350_s/: CMakeLists.txt  dma350_s_test.c  readme.rst
examples/corstone310_fvp_dma/triggering_example/: CMakeLists.txt  main_ns.c  readme.rst
examples/vad_an552/ns_side/: CMakeLists.txt  NetworkInterface.c  main_ns.c  ota_provision.c  ota_provision.h  platform_eth_dev.c  platform_eth_dev.h  project_config.h  smsc9220_eth_drv.c  smsc9220_eth_drv.h
examples/vad_an552/ns_side/amazon-freertos/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  aws_demo_config.h  core_mqtt_config.h  core_pkcs11_config.h  iot_config.h  iot_mqtt_agent_config.h  iot_secure_sockets_config.h  logging_stack.h  ota_config.h  ota_demo_config.h  publish_aws.c
examples/vad_an552/ns_side/ext/amazon-freertos/: CMakeLists.txt
examples/vad_an552/ns_side/ext/freertos-kernel/: CMakeLists.txt
examples/vad_an552/ns_side/ext/freertos-ota-pal-psa/: CMakeLists.txt
examples/vad_an552/ns_side/ext/freertos-pkcs11-psa/: 0001-Align-with-TF-M-1.4-release.patch  CMakeLists.txt
examples/vad_an552/ns_side/ext/ota-for-aws/: 0001-Remove-const-qualifier-from-appFirmwareVersion.patch  CMakeLists.txt
partitions/delegated_attestation/: CMakeLists.txt  delegated_attest.c  delegated_attest.h  delegated_attest_flow.puml  delegated_attest_integration_guide.rst  delegated_attest_req_mngr.c  delegated_attestation_manifest_list.yaml  tfm_delegated_attestation.yaml
partitions/delegated_attestation/interface/include/: tfm_delegated_attest_defs.h  tfm_delegated_attestation.h
partitions/delegated_attestation/interface/src/: tfm_delegated_attestation_api.c
partitions/delegated_attestation/test/: delegated_attest_test.c  delegated_attest_test.h
partitions/delegated_attestation/test/non_secure/: CMakeLists.txt  delegated_attest_ns_interface_testsuite.c
partitions/delegated_attestation/test/secure/: CMakeLists.txt  delegated_attest_s_interface_testsuite.c
partitions/external_trusted_secure_storage/: CMakeLists.txt  DISCLAIMER.txt  README.md  etss_manifest_list.yaml
partitions/external_trusted_secure_storage/docs/: etss_readme.rst
partitions/external_trusted_secure_storage/etss_partition/: CMakeLists.txt  etss.yaml  etss_config.cmake  etss_req_mngr.c  etss_req_mngr.h  etss_secure_api.c  etss_utils.c  etss_utils.h  external_trusted_secure_storage.c  external_trusted_secure_storage.h  secureflash_provisioning_blob.c
partitions/external_trusted_secure_storage/etss_partition/external_secure_flash/: etss_secureflash.c  etss_secureflash.h
partitions/external_trusted_secure_storage/etss_partition/secureflash/: CMakeLists.txt  secureflash.c  secureflash.h
partitions/external_trusted_secure_storage/etss_partition/secureflash/JEDEC_recommend_impl/: jedec_layer.c  jedec_layer.h  readme.rst
partitions/external_trusted_secure_storage/etss_partition/secureflash/crypto_interface/: crypto_defs.h  crypto_interface.c  crypto_interface.h
partitions/external_trusted_secure_storage/etss_partition/secureflash/include/: secureflash_error.h
partitions/external_trusted_secure_storage/etss_partition/secureflash_fs/: etss_flash_fs.c  etss_flash_fs.h  etss_flash_fs_dblock.c  etss_flash_fs_dblock.h  etss_flash_fs_mblock.c  etss_flash_fs_mblock.h
partitions/external_trusted_secure_storage/interface/include/: etss_api.h  etss_defs.h
partitions/external_trusted_secure_storage/interface/src/: etss_ipc_api.c  etss_secure_api.c
partitions/external_trusted_secure_storage/suites/etss/: CMakeLists.txt
partitions/external_trusted_secure_storage/suites/non_secure/: CMakeLists.txt  etss_ns_interface_testsuite.c  ns_test_helpers.c  ns_test_helpers.h
partitions/external_trusted_secure_storage/suites/secure/: CMakeLists.txt  etss_s_interface_testsuite.c  s_test_helpers.h
partitions/measured_boot/: CMakeLists.txt  measured_boot.c  measured_boot.h  measured_boot_integration_guide.rst  measured_boot_manifest_list.yaml  measured_boot_req_mngr.c  measured_boot_utils.c  measured_boot_utils.h  tfm_measured_boot.yaml
partitions/measured_boot/interface/include/: measured_boot_api.h  measured_boot_defs.h
partitions/measured_boot/interface/src/: measured_boot_api.c
partitions/measured_boot/test/: measured_boot_common.c  measured_boot_common.h  measured_boot_tests_common.c  measured_boot_tests_common.h  test_values.h
partitions/measured_boot/test/non_secure/: CMakeLists.txt  measured_boot_ns_interface_testsuite.c
partitions/measured_boot/test/secure/: CMakeLists.txt  measured_boot_s_interface_testsuite.c
partitions/vad_an552_sp/: CMakeLists.txt  extra_manifest_list.yaml  i2s_spm_irq.c  vad_an552_device_definition.c  vad_an552_device_definition.h  vad_an552_sp.yaml  vad_an552_sp_main.c
partitions/vad_an552_sp/Libraries/: audio_codec_mps3.c  audio_codec_mps3.h  systimer_armv8-m_timeout.c  timeout.h
partitions/vad_an552_sp/ext/CMSIS/: CMakeLists.txt
partitions/vad_an552_sp/ext/arm-endpoint-ai/: CMakeLists.txt
partitions/vad_an552_sp/native_drivers/: audio_i2s_mps3_drv.c  audio_i2s_mps3_drv.h  i2c_sbcon_drv.c  i2c_sbcon_drv.h
partitions/vad_an552_sp/ns_interface/: vad_an552.h  vad_an552_defs.h  vad_an552_ipc_api.c
(+66 files in other folders)
